--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
                         <a href="./produto1.html"><img src="./img/Sabonete líquido  3.jpg" alt=""></a>
                         <p class="product-name">Sabonete Líquido</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-                        <p class="product-price"> <span>R$</span> Preço</p>
+                        <p class="product-price"> <span>R$</span> 110,00</p>
                     </div>
 
                     <div class="product">
                         <a href="./produto2.html"><img src="./img/Protetor solar .jpg" alt=""></a>
                         <p class="product-name">Protetor Solar</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
-                        <p class="product-price"> <span>R$</span> Preço</p>
+                        <p class="product-price"> <span>R$</span> 89,90</p>
                     </div>
 
                     <div class="product">
                         <a href="./produto3.html"><img src="./img/Hidratante facial  3.jpg" alt=""></a>
                         <p class="product-name">Hidratante Facial</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
-                        <p class="product-price"> <span>R$</span> Preço</p>
+                        <p class="product-price"> <span>R$</span> 100,00</p>
                     </div>
 
                     <div class="product">
                         <a href="./produto4.html"><img src="./img/Óleo corporal .jpg" alt=""></a>
                         <p class="product-name">Óleo Corporal</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
-                        <p class="product-price"> <span>R$</span> Preço</p>
+                        <p class="product-price"> <span>R$</span> 65,00</p>
                     </div>
                 </div>
             </div>
